# LearnAndroid

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/hy/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: litepal.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/hy/android/: BaseActivity.java  BaseFragment.java
app/src/main/java/com/hy/android/Base/: BaseActivity.java  BaseApplication.java  BaseFragment.java
app/src/main/java/com/hy/android/Component/: ApplicationComponent.java  HttpComponent.java
app/src/main/java/com/hy/android/activity/: AnimationActivity.java  ArticleDetailActivity.java  AsyncActivity.java  DensityActivity.java  MainActivity.java  RxJavaActivity.java  SortingActivity.java  TestActivity.java  TestFunActivity.java  TestJniActivity.kt  VideoActivity.java  ViewActivity.java
app/src/main/java/com/hy/android/adapter/: BannerAdapter.java  ChannelPagerAdapter.java  FuncAdapter.java  HomeAdapter.java  HomePageAdapter.java  NewAdapter.java  NewsDetailAdapter.java
app/src/main/java/com/hy/android/base/: BaseActivity.java  BaseApplication.java  BaseContract.java  BaseFragment.java  BasePresenter.java  IBase.java  SupportActivity.java  SupportFragment.java
app/src/main/java/com/hy/android/bean/: BannerData.java  BaseResponse.java  Channel.java  HomeData.java  HomeDataList.java  NewsArticleBean.java  NewsCmppVideoBean.java  NewsDetail.java  NewsImagesBean.java  PieData.java  User.java  VideoChannelBean.java  VideoDetailBean.java
app/src/main/java/com/hy/android/component/: ApplicationComponent.java  HttpComponent.java
app/src/main/java/com/hy/android/database/: ChannelDao.java
app/src/main/java/com/hy/android/event/: NewChannelEvent.java  SelectChannelEvent.java
app/src/main/java/com/hy/android/filter/: AFilter.java  BaseFilter.java  OesFilter.java  YuvFilter.java
app/src/main/java/com/hy/android/fragment/: HomeFragment.java  TypeFragment.java
app/src/main/java/com/hy/android/knowledge/: MyActivity.java  OtherActivity.java
app/src/main/java/com/hy/android/model/: BikeStrategy.java  Observable.java  Observer.java  Request1.java  RequestModel.java  Singleton.java  Singleton1.java  Singleton2.java  Singleton3.java  Strategy.java  Travel.java  WalkStrategly.java  Weather.java
app/src/main/java/com/hy/android/module/: ApplicationModule.java  HttpModule.java
app/src/main/java/com/hy/android/mvp/entity/: BannerEntity.java  HomeEntity.java
app/src/main/java/com/hy/android/mvp/home/: HomeContract.kt  HomePageFragment.kt  HomePresenter.kt
app/src/main/java/com/hy/android/net/: ApiService.java  BaseObserver.java  NewsApi.java  NewsApiService.java  NewsUtils.java  RetrofitConfig.java  RetrofitHelper.java  RxSchedulers.java
app/src/main/java/com/hy/android/net/cookies/: CookiesManager.java  OkHttpCookies.java  PersistentCookieStore.java
app/src/main/java/com/hy/android/net/exception/: ServerException.java
app/src/main/java/com/hy/android/news/: DetailFragment.java  NewsActivity.java
app/src/main/java/com/hy/android/news/contract/: DetailContract.java  NewsContract.java
app/src/main/java/com/hy/android/news/presenter/: DetailPresenter.java  NewsPresenter.java
app/src/main/java/com/hy/android/ui/: NewsActivity.java
app/src/main/java/com/hy/android/ui/jandan/: JanDanFragment.java
app/src/main/java/com/hy/android/ui/news/: DetailFragment.java  NewsFragment.java
app/src/main/java/com/hy/android/utils/: ASCrashHandler.java  AppManager.java  ColorFilterImageView.java  CommonUtils.java  Constants.java  ContextUtils.java  DensityUtils.java  DialogHelper.java  GlideImageLoader.java  ImageDownLoader.java  ImageLoaderUtil.java  ItemDragHelperCallBack.java  LoadDialog.java  Logger.java  MatrixUtils.java  NetUtil.java  OnChannelListener.java  PlayerJNI.java  SpUtil.java  StateLoading.java  StatusBarUtil.java  ThreadPool.java
app/src/main/java/com/hy/android/view/: CanvasView.java  HorizontalRecyclerView.java  MyView.java  PathView.java  PieView.java
app/src/main/java/com/hy/android/viewholder/: BannerViewHolder.java  FuncListViewHolder.java  HomeListViewHolder.java  KnowledgeListViewHolder.java
app/src/main/java/com/hy/android/widget/: BottomBar.java  BottomBarTab.java  CanvasView.java  ChannelDialogFragment.java  CustomLoadMoreView.java  CustomViewPager.java  MultiImageView.java  MultiStateView.java  MyView.java  NewsDelPop.java  OnDragVHListener.java  PathView.java  PieView.java  SimpleMultiStateView.java
app/src/main/res/anim/: alpha_animation.xml  rotate_animation.xml  scale_animation.xml  translate_animation.xml  view_animation.xml
app/src/main/res/drawable/: anim1.xml  ic_launcher_background.xml
app/src/main/res/layout/: activity_animation.xml  activity_density.xml  activity_detail_webview.xml  activity_h264_decoder.xml  activity_jni.xml  activity_main.xml  activity_news.xml  activity_rx.xml  activity_test.xml  activity_video.xml  activity_view.xml  banner_item.xml  fragment_detail.xml  fragment_home.xml  fragment_news_new.xml  fragment_page_home.xml  fragment_type.xml  func_list_item.xml  home_banner.xml  home_list_item.xml  item_detail_advert.xml  item_detail_advert_longimage.xml  item_detail_doc.xml  item_detail_slide.xml  layout_toolbar.xml  list_item.xml  list_item_dot.xml  load_dialog.xml  nav_header_main.xml  view_retry.xml
app/src/main/res/menu/: activity_main_drawer.xml  menu_article_common.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/hy/android/: ExampleUnitTest.java
learn-jni-lib/: CMakeLists.txt  build.gradle
learn-jni-lib/src/androidTest/java/com/hy/learn/: ExampleInstrumentedTest.kt
learn-jni-lib/src/main/: AndroidManifest.xml
learn-jni-lib/src/main/cpp/: Codec.cpp  Codec.h  H264Decoder.cpp  H264Decoder.h  native-lib.cpp
learn-jni-lib/src/main/java/com/hy/learn/: ICallback.java  TestJni.java  User.java  UserBean.java
learn-jni-lib/src/test/java/com/hy/learn/: ExampleUnitTest.kt
(+77 files in other folders)
